tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@extends_not_first.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/extends_not_first.txt
---
 Syntax error --> [extends_not_first.txt:3:11]
  |
3 | {% extends "a" %}
  |            ^---
  = `extends` needs to be the first tag of the template
